--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -3,9 +3,13 @@ FROM python:3.7-alpine
 WORKDIR /code
 
 ENV FLASK_APP=app.py
+ENV FLASK_DEBUG=1
 ENV FLASK_RUN_HOST=0.0.0.0
 
-RUN apk add --no-cache gcc musl-dev linux-headers
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    linux-headers
 
 COPY requirements.txt requirements.txt
 
@@ -13,6 +17,7 @@ RUN pip install -r requirements.txt
 
 EXPOSE 5000
 
-COPY ./source .
+# ADD ./source .
+# RUN ls -lah
 
 CMD ["flask", "run"]
