--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,28 @@
+# version: "3.9"
+# services:
+#   app:
+#     build: 
+#       context: .
+#       dockerfile: Dockerfile.local
+#     environment:
+#       - FLASK_APP=app.py
+#       - FLASK_DEBUG=1
+#       - FLASK_RUN_HOST=0.0.0.0
+#     ports:
+#       - "8000:5000"
+#     volumes: 
+#       - ./src:/code
 version: "3.9"
 services:
-  api:
+  app:
     build: 
       context: .
-      dockerfile: Dockerfile.local
+      dockerfile: Dockerfile.lambda
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_DEBUG=1
+      - FLASK_RUN_HOST=0.0.0.0
     ports:
-      - "8000:5000"
+      - "9000:8080"
     volumes: 
       - ./src:/code
-  redis:
-    image: "redis:alpine" 
