--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,14 @@
-# version: "3.9"
-# services:
-#   app:
-#     build: 
-#       context: .
-#       dockerfile: Dockerfile.local
-#     environment:
-#       - FLASK_APP=app.py
-#       - FLASK_DEBUG=1
-#       - FLASK_RUN_HOST=0.0.0.0
-#     ports:
-#       - "8000:5000"
-#     volumes: 
-#       - ./src:/code
 version: "3.9"
 services:
   app:
     build: 
       context: .
-      dockerfile: Dockerfile.lambda
+      dockerfile: Dockerfile.local
     environment:
       - FLASK_APP=app.py
       - FLASK_DEBUG=1
       - FLASK_RUN_HOST=0.0.0.0
     ports:
-      - "9000:8080"
+      - "8000:5000"
     volumes: 
       - ./src:/code
